# mbox

./: .gitignore  Cargo.toml
examples/: config.rs  dbutil.rs  docx.rs  mysql.rs  oracle.rs  test.rs
fixtures/: config.yaml.sample
src/: cli.rs  config.rs  lib.rs
src/db/: mod.rs  mysql.rs  oracle.rs
