[package]
name = "mbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
docx-rs = "0.4.6"
mysql = "23.0.1"
oracle = "0.5.7"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.27.0", features = ["full"] }
